# SaveMeGB

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  launcher_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ROADMAP.md  index.html
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  license.rs  main.rs  manifest.rs  model.rs  progress.rs  registry.rs  safe_delete.rs  scanner.rs  settings.rs
src-tauri/tests/: engine.rs
