[package]
name = "savemegb"
version = "0.1.0"
description = "Reclaim gigabytes of SSD space by finding orphaned game saves and caches"
authors = ["SaveMeGB contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Ntooxx/SaveMeGB"

[lib]
name = "savemegb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "savemegb"
path = "src/main.rs"

[[bin]]
name = "savemegb-cli"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
winreg = "0.52"
walkdir = "2"
keyvalues-parser = "0.2"
directories = "5"
chrono = { version = "0.4", features = ["serde", "clock"] }
trash = "5"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[profile.dev]
opt-level = 1
